Finished daily challenges

--- a/bit_battles/templates/app/app_base.html
+++ b/bit_battles/templates/app/app_base.html
@@ -14,6 +14,7 @@
 <body>
     <nav>
         <a href="/app/editor">Editor</a>
+        <a href="/app/daily">Daily</a>
         <a href="/app/battles">Battles</a>
         <a href="/app/user/{{ current_user.username }}">Profile</a>
     </nav>
