--- a/bit_battles/templates/app/battle.html
+++ b/bit_battles/templates/app/battle.html
@@ -64,6 +64,20 @@
         <div id="alerts"></div>
 
         <canvas id="game"></canvas>
+
+        <div class="instructions">
+            <div class="title">
+                <h3>Help</h3>
+                <span onclick="this.parentNode.parentNode.classList.toggle('active');">↑</span>
+            </div>
+            <ul>
+                <li>🖐 To toggle inputs</li>
+                <li>🔧 To move gates</li>
+                <li>Select a gate by clicking on one of the buttons, deselect by clicking on it again.</li>
+                <li>Place a gate by left clicking, remove a gate by right clicking.</li>
+                <li>Right click the canvas and drag to move.</li>
+            </ul>
+        </div>
     </div>
 
     <div class="stage results" id="results">
