--- a/bit_battles/templates/app/challenge.html
+++ b/bit_battles/templates/app/challenge.html
@@ -46,11 +46,32 @@
         <div id="alerts"></div>
 
         <canvas id="game"></canvas>
+
+        <div class="instructions">
+            <div class="title">
+                <h3>Help</h3>
+                <span onclick="this.parentNode.parentNode.classList.toggle('active');">↑</span>
+            </div>
+            <ul>
+                <li>🖐 To toggle inputs</li>
+                <li>🔧 To move gates</li>
+                <li>Select a gate by clicking on one of the buttons, deselect by clicking on it again.</li>
+                <li>Place a gate by left clicking, remove a gate by right clicking.</li>
+                <li>Right click the canvas and drag to move.</li>
+            </ul>
+        </div>
     </div>
 
     <div class="stage results" id="results">
+        <nav>
+            <a href="/app/editor">Editor</a>
+            <a href="/app/daily">Daily</a>
+            <a href="/app/battles">Battles</a>
+            <a href="/app/user/{{ current_user.username }}">Profile</a>
+        </nav>
+
         <h2>Your results</h2>
-        <div id="player-results">
+        <div id="player-results"></div>
     </div>
 </body>
 </html>
