--- a/bit_battles/templates/app/editor.html
+++ b/bit_battles/templates/app/editor.html
@@ -26,10 +26,22 @@
         <button onclick="toggleSelectGate('OR')">OR</button>
         <button onclick="toggleSelectGate('NOT')">NOT</button>
         <button onclick="toggleSelectGate('XOR')">XOR</button>
-        <button onclick="simulate()">Simulate</button>
     </div>
     <div class="canvasContainer">
         <canvas id="game"></canvas>
+    </div>
+    <div class="instructions">
+        <div class="title">
+            <h3>Help</h3>
+            <span onclick="this.parentNode.parentNode.classList.toggle('active');">↑</span>
+        </div>
+        <ul>
+            <li>🖐 To toggle inputs</li>
+            <li>🔧 To move gates</li>
+            <li>Select a gate by clicking on one of the buttons, deselect by clicking on it again.</li>
+            <li>Place a gate by left clicking, remove a gate by right clicking.</li>
+            <li>Right click the canvas and drag to move.</li>
+        </ul>
     </div>
 </body>
 </html>
