--- a/bit_battles/static/css/game.css
+++ b/bit_battles/static/css/game.css
@@ -102,6 +102,7 @@ canvas {
 
 div.alert {
     position: fixed;
+    z-index: 1000;
     right: 10px;
     background-color: rgb(0, 0, 0, .5);
     color: #fff;
