--- a/bit_battles/templates/app/challenge.html
+++ b/bit_battles/templates/app/challenge.html
@@ -70,7 +70,7 @@
             <a href="/app/user/{{ current_user.username }}">Profile</a>
         </nav>
 
-        <h2>Your results</h2>
+        <h2>Global averages</h2>
         <div id="player-results"></div>
     </div>
 </body>
