--- a/bit_battles/templates/app/daily.html
+++ b/bit_battles/templates/app/daily.html
@@ -9,7 +9,7 @@
                 <div class="entry user">
                     <span class="position-{{ loop.index }}">[{{ loop.index }}]</span>
                     <img src="https://api.dicebear.com/9.x/shapes/svg?seed={{ daily.username }}&backgroundColor=b6e3f4&size=32" alt="{{ daily.username }}'s avatar">
-                    <h4>{{ daily.username }}</h4>
+                    <h4>{{ daily.username }}{% if daily.streak > 0 %}&emsp;(🔥{{ daily.streak }}){% endif %}</h4>
                     <span><b>Gates:</b> {{ daily.gates }}</span>                        
                     <span><b>Longest path:</b> {{ daily.longest_path }}</span>                        
                     <span><b>Duration:</b> {{ daily.duration }}</span>
