--- a/bit_battles/templates/app/challenge.html
+++ b/bit_battles/templates/app/challenge.html
@@ -57,6 +57,8 @@
                 <li>🔧 To move gates</li>
                 <li>Select a gate by clicking on one of the buttons, deselect by clicking on it again.</li>
                 <li>Place a gate by left clicking, remove a gate by right clicking.</li>
+                <li>Start drawing a wire by left clicking a gate connector. Stop drawing by right clicking</li>
+                <li>Place a wire (once you started drawing one) by left clicking on a connector, a wire or a free spot on the canvas. Remove a wire by right clicking it</li>
                 <li>Right click the canvas and drag to move.</li>
             </ul>
         </div>
