--- a/bit_battles/static/css/basics.css
+++ b/bit_battles/static/css/basics.css
@@ -23,6 +23,11 @@ button, input {
     border-radius: 5px;
     border: none;
     background-color: #fff;
+    transition: .3s;
+}
+
+button:hover {
+    background-color: var(--bg-sec);
 }
 
 nav {
