--- a/bit_battles/templates/app/editor.html
+++ b/bit_battles/templates/app/editor.html
@@ -30,20 +30,7 @@
     <div class="canvasContainer">
         <canvas id="game"></canvas>
     </div>
-    <div class="instructions">
-        <div class="title">
-            <h3>Help</h3>
-            <span onclick="this.parentNode.parentNode.classList.toggle('active');">↑</span>
-        </div>
-        <ul>
-            <li>🖐 To toggle inputs</li>
-            <li>🔧 To move gates</li>
-            <li>Select a gate by clicking on one of the buttons, deselect by clicking on it again.</li>
-            <li>Place a gate by left clicking, remove a gate by right clicking.</li>
-            <li>Start drawing a wire by left clicking a gate connector. Stop drawing by right clicking</li>
-            <li>Place a wire (once you started drawing one) by left clicking on a connector, a wire or a free spot on the canvas. Remove a wire by right clicking it</li>
-            <li>Right click the canvas and drag to move.</li>
-        </ul>
-    </div>
+
+    {% include "components/instructions.html" %}
 </body>
 </html>
