--- a/bit_battles/templates/auth/login.html
+++ b/bit_battles/templates/auth/login.html
@@ -13,6 +13,8 @@
         <button type="submit">Login</button>
     </form>
 
-    No account yet? <a href="/auth/register">Register!</a> <br>
-    Or just play around in the <a href="/app/editor">editor</a>
+    <p>
+        No account yet? <a href="/auth/register">Register</a>! <br>
+        Or just play around in the <a href="/app/editor">editor</a>.
+    <p>
 {% endblock %}
