--- a/bit_battles/templates/auth/register.html
+++ b/bit_battles/templates/auth/register.html
@@ -13,6 +13,8 @@
         <button type="submit">Register</button>
     </form>
 
-    Already have an account? <a href="/app/battles">Login!</a> <br>
-    Or just play around in the <a href="/app/editor">editor</a>
+    <p>
+        Already have an account? <a href="/app/battles">Login</a>! <br>
+        Or just play around in the <a href="/app/editor">editor</a>.
+    </p>
 {% endblock %}
