--- a/bit_battles/static/css/basics.css
+++ b/bit_battles/static/css/basics.css
@@ -31,8 +31,12 @@ button, input {
 }
 
 input:hover,
-button:hover {
+button:not(:disabled):hover {
     background-color: var(--bg-sec);
+}
+
+button:disabled {
+    cursor: not-allowed;
 }
 
 input:focus {
