--- a/bit_battles/templates/app/daily.html
+++ b/bit_battles/templates/app/daily.html
@@ -6,10 +6,11 @@
     <div class="dailies">
         <div class="leaderboard">
             {% for daily in dailies %}
-                <div class="entry user">
+                <div class="entry user"{% if passed %} onclick="window.open('/app/circuit/daily/{{ daily.circuit }}')"{% endif %}>
                     <span class="position-{{ loop.index }}">[{{ loop.index }}]</span>
                     <img src="https://api.dicebear.com/9.x/shapes/svg?seed={{ daily.username }}&backgroundColor=b6e3f4&size=32" alt="{{ daily.username }}'s avatar">
                     <h4>{{ daily.username }}{% if daily.streak > 0 %}&emsp;(🔥{{ daily.streak }}){% endif %}</h4>
+                    <i>{% if passed %}View circuit{% else %}Submit to view{% endif %}</i>
                     <span><b>Gates:</b> {{ daily.gates }}</span>                        
                     <span><b>Longest path:</b> {{ daily.longest_path }}</span>                        
                     <span><b>Duration:</b> {{ daily.duration }}</span>
@@ -17,6 +18,6 @@
             {% endfor %}
         </div>
     
-        <button class="action" onclick="window.location.href='/app/challenge/daily'">Daily challenge</button>
+        <button class="action" onclick="window.location.href='/app/challenge/daily'"{% if passed %} disabled{% endif %}>Daily challenge</button>
     </div>
 {% endblock %}
