Reorganized the project

--- a/bit_battles/templates/app/user.html
+++ b/bit_battles/templates/app/user.html
@@ -1,4 +1,4 @@
-{% extends "app/app_base.html" %}
+{% extends "bases/app_base.html" %}
 
 {% block content %}
     <style>summary h2 {display:inline-block;}</style>
