--- a/bit_battles/templates/challenges/daily.html
+++ b/bit_battles/templates/challenges/daily.html
@@ -1,4 +1,4 @@
-{% extends "app/app_base.html" %}
+{% extends "bases/app_base.html" %}
 
 {% block content %}
     <link rel="stylesheet" type="text/css" href="/static/css/dailies.css">
