--- a/bit_battles/templates/challenges/challenge.html
+++ b/bit_battles/templates/challenges/challenge.html
@@ -32,7 +32,7 @@
             <button class="gate" onclick="toggleSelectGate('OR')" id="OR-btn">OR</button>
             <button class="gate" onclick="toggleSelectGate('NOT')" id="NOT-btn">NOT</button>
             <button class="gate" onclick="toggleSelectGate('XOR')" id="XOR-btn">XOR</button>
-            <button onclick="test(challenge.truthtable)">Test</button>
+            <button onclick="test(challenge.truthtable, false)">Test</button>
             <button onclick="submit()">Submit</button>
             <button id="timer">00:00</button>
         </div>
