--- a/bit_battles/static/css/basics.css
+++ b/bit_battles/static/css/basics.css
@@ -57,3 +57,10 @@ nav {
 .user img {
     border-radius: 100%;
 }
+
+code {
+    background-color: var(--bg-sec);
+    padding: 2px 6px;
+    font-size: 14px;
+    border-radius: 5px;
+}
