--- a/bit_battles/static/css/basics.css
+++ b/bit_battles/static/css/basics.css
@@ -44,8 +44,21 @@ input:focus {
 }
 
 nav {
-    text-align: center;
     margin: 25px;
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+}
+
+nav a {
+    text-decoration: none;
+    transition: .3s;
+    color: var(--bg-sec);
+}
+
+nav a.active,
+nav a:hover {
+    color: black;
 }
 
 .user {
