--- a/bit_battles/templates/bases/app_base.html
+++ b/bit_battles/templates/bases/app_base.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <nav>
-        <a href="/app/editor">Editor</a>
-        <a href="/app/daily">Daily</a>
-        <a href="/app/battles">Battles</a>
-        <a href="/app/user/{{ current_user.username }}">Profile</a>
+        <a{% if request.path == "/app/editor" %} class="active"{% endif %} href="/app/editor">[ Editor ]</a>
+        <a{% if request.path == "/app/daily" %} class="active"{% endif %} href="/app/daily">[ Daily ]</a>
+        <a{% if request.path == "/app/battles" %} class="active"{% endif %} href="/app/battles">[ Battles ]</a>
+        <a{% if "/app/user/" in request.path %} class="active"{% endif %} href="/app/user/{{ current_user.username }}">[ Profile ]</a>
     </nav>
 
     {% block content %}{% endblock %}
