Fixed battles position design Updated navbar

--- a/bit_battles/templates/battles/battles.html
+++ b/bit_battles/templates/battles/battles.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="/static/css/battles.css">
     
     <div class="battles">
-        <h1>Bit Battles</h1>
         <div class="position-container">
             <div class="position second">
                 <div class="top"></div>
@@ -34,6 +33,7 @@
                 </div>
             </div>
         </div>
+        <div class="positions-background"></div>
         <div class="overlay"></div>
         
         <div class="page-content">
