--- a/bit_battles/static/css/basics.css
+++ b/bit_battles/static/css/basics.css
@@ -43,11 +43,21 @@ input:focus {
     border: 1px solid var(--bg-sec);
 }
 
+.name {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+}
+.name h4 {
+    margin: 0px;
+}
+
 nav {
-    margin: 25px;
     display: flex;
-    gap: 25px;
     justify-content: center;
+    align-items: center;
+    margin: 25px;
+    gap: 25px;
 }
 
 nav a {
