--- a/bit_battles/static/css/battles.css
+++ b/bit_battles/static/css/battles.css
@@ -1,13 +1,8 @@
 .battles {
     max-width: 1000px;
     height: 500px;
-    margin: 0px auto;
+    margin: 100px auto;
     position: relative;
-}
-
-.battles h1 {
-    text-align: center;
-    margin: 100px 0px;
 }
 
 .position-container {
@@ -29,22 +24,26 @@
     border: 1px solid #969696;
 }
 .front {
-    border: 1px solid #969696;
     background-color: #b9b9b9;
     width: 225px;
 }
 .first .front {
     height: 390px;
     transform: perspective(500px) rotateX(135deg) translateX(-9px);
+    border: 1px solid #969696;
 }
 .second .front {
     height: 290px;
-    transform: perspective(500px) rotateX(135deg) translateX(-18px) translateY(10px);
+    border: 1px solid #969696;
+    border-right: none;
+    transform: perspective(300px) rotateX(135deg) translate(-2px, -10px);
 }
 .third .front {
     height: 190px;
-    transform: perspective(500px) rotateX(135deg) translateY(13px);
+    transform: perspective(300px) rotateX(135deg) translate(-10px, 3px);
     width: 233px;
+    border: 1px solid #969696;
+    border-left: none;
 }
 
 .position.second {
@@ -88,18 +87,28 @@
     text-align: center;
 }
 
+.battles .positions-background {
+    background: var(--bg-sec);
+    width: 500px;
+    height: 200px;
+    position: absolute;
+    bottom: 19%;
+    z-index: -2;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .battles .overlay {
     position: absolute;
-    bottom: -10%;
+    bottom: 19%;
     width: 100%;
     height: 150px;
-    background-image: linear-gradient(rgb(185, 185, 185, 0%), #b9b9b9);
+    background-image: linear-gradient(rgb(185, 185, 185, 0%), #f1f1f1);
 }
 
 .battles .page-content {
-    padding: 50px;
+    padding: 75px 50px;
     margin: -86px 0px;
-    background-color: var(--bg-sec);
     text-align: center;
 }
 
