--- a/bit_battles/templates/challenges/challenge.html
+++ b/bit_battles/templates/challenges/challenge.html
@@ -52,7 +52,7 @@
     <div class="stage results" id="results">
         {% include "components/navbar.html" %}
 
-        <div class="result-contents">
+        <div class="result-contents challenge">
             <div id="player-results"></div>
         </div>
     </div>
