--- a/bit_battles/templates/app/user.html
+++ b/bit_battles/templates/app/user.html
@@ -1,23 +1,40 @@
 {% extends "bases/app_base.html" %}
 
 {% block content %}
-    <style>summary h2 {display:inline-block;}</style>
+    <link rel="stylesheet" type="text/css" href="/static/css/user.css">
 
-    <div class="user">
-        <img src="https://api.dicebear.com/9.x/shapes/svg?seed={{ user.username }}&backgroundColor=b6e3f4&size=32" alt="{{ user.username }}'s avatar">
-        <h1>{{ user.username }}</h1>
-    </div>
-    <h4>Daily streak: {{ streak }}</h4>
-
-    {% for statistic, values in statistics.items() %}
-        <details>
-            <summary><h2>{{ statistic }}</h2></summary>
-            {% for battle in values %}  
-                <div>
-                    {% if battle.winner %}You won this battle.{% elif not battle.passed %}You did not finish this battle.{% endif %}
-                    Your score: {{ battle.score }}
-                </div>
+    <div class="user-contents">
+        <div class="user">
+            <img src="https://api.dicebear.com/9.x/shapes/svg?seed={{ user.username }}&backgroundColor=b6e3f4&size=64" alt="{{ user.username }}'s avatar">
+            <div>
+                <h1>{{ user.username }}</h1>
+                <b>Daily streak: {{ streak }}</b>
+            </div>
+        </div>
+    
+        <div class="battle-history">
+            {% for statistic, values in statistics.items() %}
+                <details>
+                    <summary><h4>{{ statistic }}</h4></summary>
+                    {% for battle in values %}  
+                        <div class="battle">
+                            <div>
+                                {% if battle.winner %}
+                                    [ <span class="won">v</span> ]
+                                    You <b>won</b> this battle.
+                                {% elif not battle.passed %}
+                                    [ <span class="failed">x</span> ]
+                                    You <b>failed</b> this battles challenge.
+                                {% else %}
+                                    [ <span class="passed">•</span> ]
+                                    You <b>lost</b> this battle.
+                                {% endif %}
+                            </div>
+                            <i>{{ battle.relative_timestamp }}</i>
+                        </div>
+                    {% endfor %}
+                </details>
             {% endfor %}
-        </details>
-    {% endfor %}
+        </div>
+    </div>
 {% endblock %}
