Fixed small typo Removed battle statistic ID migration

--- a/bit_battles/templates/app/user.html
+++ b/bit_battles/templates/app/user.html
@@ -24,7 +24,7 @@
                                     You <b>won</b> this battle.
                                 {% elif not battle.passed %}
                                     [ <span class="failed">x</span> ]
-                                    You <b>failed</b> this battles challenge.
+                                    You <b>failed</b> this battle.
                                 {% else %}
                                     [ <span class="passed">•</span> ]
                                     You <b>lost</b> this battle.
