Improved SEO base templates

--- a/bit_battles/templates/auth/auth_base.html
+++ b/bit_battles/templates/auth/auth_base.html
@@ -19,8 +19,7 @@
     <meta name="twitter:image" content="https://www.bitbattles.xyz/static/images/card.png">
     
     <link rel="canonical" href="https://www.bitbattles.xyz">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="/static/images/favicon.ico">
 
     <title>Bit Battles - Improve Your Logic Design through Battles and Challenges</title>
 
