--- a/bit_battles/templates/auth/login.html
+++ b/bit_battles/templates/auth/login.html
@@ -5,10 +5,10 @@
 
     <form method="POST">
         <h3>Username</h3>
-        <input type="text" name="user" placeholder="Username">
+        <input type="text" name="user" placeholder="Username" autocomplete="username">
 
         <h3>Password</h3>
-        <input type="password" name="password" placeholder="Password...">
+        <input type="password" name="password" placeholder="Password..." autocomplete="current-password">
 
         <button type="submit">Login</button>
     </form>
