--- a/bit_battles/templates/auth/register.html
+++ b/bit_battles/templates/auth/register.html
@@ -5,10 +5,10 @@
 
     <form method="POST">
         <h3>Username</h3>
-        <input type="text" name="username" maxlength="30" placeholder="Username...">
+        <input type="text" name="username" maxlength="30" placeholder="Username..." autocomplete="username">
         
         <h3>Password</h3>
-        <input type="password" name="password" placeholder="Password...">
+        <input type="password" name="password" placeholder="Password..." autocomplete="password">
 
         <button type="submit">Register</button>
     </form>
