Cleaned up repetitive html

--- a/bit_battles/templates/auth/auth_base.html
+++ b/bit_battles/templates/auth/auth_base.html
@@ -4,28 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="BitBattles - Enhance your logic circuit design skills with daily challenges, unique puzzles, and competitive battles. Implement truth tables efficiently and master logic design!">
-    <meta name="keywords" content="logic circuits, digital design, truth tables, BitBattles, daily challenges, logic puzzles, logic games, circuit design, logic gates">
-    <meta name="author" content="BitBattles">
-
-    <meta property="og:title" content="BitBattles - Improve Your Logic Design through Battles and Challenges">
-    <meta property="og:description" content="Take your logic circuit design skills to the next level with BitBattles. Participate in engaging daily challenges and compete in battles to sharpen your skills.">
-    <meta property="og:url" content="https://www.bitbattles.xyz">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.bitbattles.xyz/static/images/card.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="BitBattles - Improve Your Logic Design through Battles and Challenges">
-    <meta name="twitter:description" content="Challenge yourself with logic puzzles and compete in truth table battles. Perfect your circuit design skills with BitBattles!">
-    <meta name="twitter:image" content="https://www.bitbattles.xyz/static/images/card.png">
-    
-    <link rel="canonical" href="https://www.bitbattles.xyz">
-    <link rel="icon" href="/static/images/favicon.ico">
+    {% include "components/embed.html" %}
 
     <title>Bit Battles - Improve Your Logic Design through Battles and Challenges</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
     <link rel="stylesheet" type="text/css" href="/static/css/auth.css">
 </head>
