--- a/bit_battles/templates/app/editor.html
+++ b/bit_battles/templates/app/editor.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Bit Battles - Free editor</title>
+    {% include "components/embed.html" %}
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
+    <title>Bit Battles - Free editor</title>
     
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
     <link rel="stylesheet" type="text/css" href="/static/css/game.css">
