--- a/bit_battles/templates/challenges/challenge.html
+++ b/bit_battles/templates/challenges/challenge.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    {% include "components/embed.html" %}
+
     <title>Bit Battles</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js" crossorigin="anonymous"></script>
