--- a/bit_battles/templates/circuits/circuit.html
+++ b/bit_battles/templates/circuits/circuit.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    {% include "components/embed.html" %}
+
     <title>Bit Battles - Free editor</title>
     
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
