--- a/bit_battles/templates/bases/app_base.html
+++ b/bit_battles/templates/bases/app_base.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="flash">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
     {% include "components/navbar.html" %}
 
     {% block content %}{% endblock %}
