Added back button

--- a/bit_battles/templates/challenges/challenge.html
+++ b/bit_battles/templates/challenges/challenge.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" type="text/css" href="/static/css/basics.css">
 </head>
 <body>
+    <div class="home">
+        <button onclick="if(window.history.length>1){window.history.back();}else{window.location.href='/app/battles';}">🏠</button>
+    </div>
+
     <div class="stage" id="challenge">
         <div class="toolbar">
             <button onclick="debugMode()">🖐</button>
