--- a/bit_battles/templates/circuits/circuit.html
+++ b/bit_battles/templates/circuits/circuit.html
@@ -20,6 +20,10 @@
     </script>
 </head>
 <body>
+    <div class="home">
+        <button onclick="if(window.history.length>1){window.history.back();}else{window.location.href='/app/battles';}">🏠</button>
+    </div>
+
     <div class="toolbar">
         <button onclick="debugMode()">🖐</button>
         <button onclick="editMode()">🔧</button>
