--- a/bit_battles/static/css/game.css
+++ b/bit_battles/static/css/game.css
@@ -89,17 +89,25 @@ body {
     flex: 1;
 }
 
+div.home,
 div.toolbar {
     position: fixed;
     top: 25px;
-    left: 50%;
-    transform: translate(-50%);
+    left: 25px;
     height: 50px;
     background-color: var(--bg-pri);
     border: 1px solid var(--bg-sec);
     border-radius: 10px;
     display: flex;
     align-items: center;
+}
+div.home {
+    width: 50px;
+    justify-content: center;
+}
+div.toolbar {
+    left: 50%;
+    transform: translate(-50%);
     gap: 10px;
     padding: 0px 10px;
 }
