--- a/bit_battles/templates/app/editor.html
+++ b/bit_battles/templates/app/editor.html
@@ -15,6 +15,10 @@
     <script src="/static/js/simulation.js"></script>
 </head>
 <body>
+    <div class="home">
+        <button onclick="if(window.history.length>1){window.history.back();}else{window.location.href='/app/battles';}">🏠</button>
+    </div>
+
     <div class="toolbar">
         <button onclick="debugMode()">🖐</button>
         <button onclick="editMode()">🔧</button>
