--- a/bit_battles/templates/challenges/daily_challenge.html
+++ b/bit_battles/templates/challenges/daily_challenge.html
@@ -54,7 +54,7 @@
     <div class="stage results" id="results">
         {% include "components/navbar.html" %}
 
-        <div class="result-contents challenge">
+        <div class="result-contents daily-challenge">
             <div id="player-results"></div>
         </div>
     </div>
