--- a/bit_battles/templates/challenges/edit_challenge.html
+++ b/bit_battles/templates/challenges/edit_challenge.html
@@ -11,6 +11,8 @@
         <input type="hidden" name="input-data" id="inputData" value="{{ challenge.inputs }}">
         <input type="hidden" name="output-data" id="outputData" value="">
 
+        <input type="text" name="name" placeholder="Challenge name">
+
         <div class="truthtable" id="truthtable">
             <div class="add-column">
                 <button type="button" onclick="increaseInputs()">+</button>
