--- a/bit_battles/static/css/game.css
+++ b/bit_battles/static/css/game.css
@@ -173,6 +173,7 @@ canvas {
     display: block;
     padding: 0;
     margin: 0;
+    background-position: 10px 10px;
     background-size: 20px 20px;
     background-image: radial-gradient(circle, var(--bg-sec) 1px, rgba(0, 0, 0, 0) 1px);
 }
